# ASMP25-26final

./: .gitignore  ASMP25-26.code-workspace  Events.css  MentorCard.css  MentorCard.jsx  README.md  Toggle.css  Toggle.jsx  docker-compose.yaml  events.jsx
Backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  wsgi-entrypoint.sh
Backend/Authentication/: admin.py  apps.py  mail.py  models.py  serializers.py  urls.py  views.py
Backend/Backend/: settings.py  urls.py
Backend/MentorData/: data.csv  data2.csv
Backend/Mentors/: apps.py  models.py  options.py  serializers.py  urls.py  views.py
Backend/Registrations/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
Backend/Registrations/management/commands/: run_scheduler.py
Frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
Frontend/src/: App.css  App.jsx  main.jsx  main.scss
Frontend/src/Fakeheader/: Fakeheader.jsx
Frontend/src/animations/: preload.jsx
Frontend/src/assets/: scroll.json
Frontend/src/components/: Core.jsx  CursorAnimation.css  CursorAnimation.jsx  Faq.css  Faq.jsx  MentorCard.css  MentorCard.jsx  Profile.css  Profile.jsx  Toggle.css  Toggle.jsx  UnifiedMentorCard.jsx  login.jsx  register.jsx  research.jsx
Frontend/src/data/: noncore_consult.jsx  noncore_finance.jsx  noncore_software.jsx  wishlist_data.jsx
Frontend/src/hooks/: useAddToWishlist.jsx  useDeleteFromWishlist.jsx  useEditProfile.jsx  useFetchMentors.jsx  useFetchProfile.jsx  useFetchWishlist.jsx  useForgotPassword.jsx  useLogin.jsx  useRegisterMentors.jsx  (+1 more)
(+47 files in other folders)
